<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:id="@+id/album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/album_by" />

        <TextView
            android:id="@+id/album_artist"
            android:layout_width="0dp"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/length" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_weight="1"
            android:text="@string/tracks" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/released" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_weight="1"
            android:text="@string/date" />
    </LinearLayout>
</LinearLayout>